Update a version Angular 9x

--- a/angular/lista-de-pendientes/src/app/tareas/tareas.component.html
+++ b/angular/lista-de-pendientes/src/app/tareas/tareas.component.html
@@ -1,28 +1,27 @@
 <div *ngIf="!error">
 
+  <ul class="list-unstyled" *ngIf=" tareas && tareas.length > 0 ">
 
-<ul class="list-unstyled" *ngIf="tareas && tareas.length > 0 " >
+    <li *ngFor="let item of tareas">
 
-  <li *ngFor="let item of tareas"> 
+      <app-tarea-individual [tareaInfo]="item" (cambioTarea)="actualizar()"> </app-tarea-individual>
 
-      <app-tarea-individual [tareaInfo]="item" (cambioTarea)="actualizar()" > </app-tarea-individual>
+    </li>
 
-  </li>
+  </ul>
 
-</ul>
-
-<div *ngIf="!tareas || tareas.length <= 0 " >
-  <h1>
-  Lista vacía
-  </h1>
-</div>
-
-<input type="text" [(ngModel)]="modeloItem.nuevoNombre" >
-  <button (click)="crearRegistro()" > GUARDAR  </button>
-
-</div>
-
- <div *ngIf="error"  class="alert alert-danger" role="alert">
-    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-    <span class="sr-only"></span> Error: Aplicación no disponible
+  <div *ngIf="!tareas || tareas.length <= 0 ">
+    <h1>
+      Lista vacía
+    </h1>
   </div>
+
+  <input type="text" #nuevoNombre>
+  <button (click)="crearRegistro(nuevoNombre)"> GUARDAR </button>
+
+</div>
+
+<div *ngIf="error" class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only"></span> Error: Aplicación no disponible
+</div>
