--- a/angular/lista-de-pendientes/src/app/tarea-individual/tarea-individual.component.html
+++ b/angular/lista-de-pendientes/src/app/tarea-individual/tarea-individual.component.html
@@ -4,19 +4,18 @@
 
     <span class="herramientas">
 
-        <span class="item editar"> 
-            <i class="glyphicon glyphicon-pencil" aria-hidden="true" (click)="activarEdicion(tareaInfo.texto)"></i>
+        <span class="item editar">
+            <i class="glyphicon glyphicon-pencil" aria-hidden="true" (click)="activarEdicion()"></i>
         </span>
 
-        <span class="item borrar"> 
-            <i class="glyphicon glyphicon-trash" aria-hidden="true" (click)="borrarRegistro(tareaInfo)" ></i>
+        <span class="item borrar">
+            <i class="glyphicon glyphicon-trash" aria-hidden="true" (click)="borrarRegistro(tareaInfo)"></i>
         </span>
 
     </span>
 </div>
-<div>
 
 <div *ngIf="mostrarDatos">
-    <input type="text" [(ngModel)]="tareaModel.nombre" >
-    <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true" (click)="editarTarea(tareaInfo)" ></i>
+    <input type="text" #nombreItem>
+    <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true" (click)="editarTarea(tareaInfo , nombreItem )"></i>
 </div>
